--- a/app/src/main/res/values-ms/strings.xml
+++ b/app/src/main/res/values-ms/strings.xml
@@ -1280,6 +1280,8 @@ Menerima mesej pertukaran kunci untuk versi protokol yang tidak sah.</string>
   <string name="trimmer__deleting_old_messages">Memadam mesej-mesej lama…</string>
   <string name="trimmer__old_messages_successfully_deleted">Berjaya memadam mesej-mesej lama</string>
   <!--Insights-->
+  <string name="Insights__title">Wawasan</string>
+  <string name="InsightsDashboardFragment__title">Wawasan</string>
   <string name="InsightsDashboardFragment__cancel">Batal</string>
   <string name="InsightsDashboardFragment__send">Hantar</string>
   <string name="FirstInviteReminder__title">Jemput ke Signal</string>
